# Kursach

./: CMakeLists.txt  efsefsefsef  main.cpp
